<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- 顶部 -->
        <com.sn.blackdianqi.view.SquareLinearLayout
            android:id="@+id/layout_head"
            android:layout_width="@dimen/dingbu_yuan_size"
            android:layout_height="@dimen/dingbu_yuan_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="9dp"
            android:background="@mipmap/ic_yuan"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_anjian_top_icon"
                android:layout_width="@dimen/dingbu_yuan_ren_size"
                android:layout_height="@dimen/dingbu_yuan_ren_size"
                android:layout_marginTop="40dp"
                android:background="@mipmap/ic_dengguang" />

            <TextView
                android:id="@+id/text_anjian_top_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dengguangshijian"
                android:textColor="@color/text_yuan"
                android:textSize="@dimen/dingbu_yuan_title_size"></TextView>

        </com.sn.blackdianqi.view.SquareLinearLayout>

        <TextView
            android:id="@+id/tv_10fenzhong"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_tuoyuan_normal"
            android:text="@string/tenfenzhong"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/anjian_text_color_selector"
            />

        <TextView
            android:id="@+id/tv_8xiaoshi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_tuoyuan_normal"
            android:text="@string/eightxiaoshi"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/anjian_text_color_selector"
            />


        <TextView
            android:id="@+id/tv_10xiaoshi"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_tuoyuan_normal"
            android:text="@string/tentxiaoshi"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/anjian_text_color_selector"
            />

    </LinearLayout>

</ScrollView>