<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <!-- 顶部 -->
    <com.sn.blackdianqi.view.SquareLinearLayout
        android:layout_width="@dimen/dingbu_yuan_size"
        android:layout_height="@dimen/dingbu_yuan_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="9dp"
        android:background="@mipmap/ic_yuan"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_anjian_top_icon"
            android:layout_width="@dimen/dingbu_yuan_ren_size"
            android:layout_height="@dimen/dingbu_yuan_ren_size"
            android:layout_marginTop="40dp"
            android:background="@mipmap/xr_kandianshi_da" />

        <TextView
            android:id="@+id/text_anjian_top_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/kandianshi"
            android:textColor="@color/text_yuan"
            android:textSize="@dimen/dingbu_yuan_title_size"></TextView>


    </com.sn.blackdianqi.view.SquareLinearLayout>



    <!-- 记忆区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/jiyi_height"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/jiyi_margin_sides"
        android:layout_marginRight="@dimen/jiyi_margin_sides">


        <com.sn.blackdianqi.view.JiyiView
            android:id="@+id/view_jiyi1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:title="@string/jiyi1"
            app:bgnormal="@drawable/bg_tuoyuan_normal"
            app:bgselected="@drawable/bg_tuoyuan_selected"
            android:layout_weight="1"
            />


        <View
            android:layout_width="@dimen/jiyi_middle"
            android:layout_height="match_parent"
            />

        <com.sn.blackdianqi.view.JiyiView
            android:id="@+id/view_jiyi2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:title="@string/jiyi2"
            app:bgnormal="@drawable/bg_tuoyuan_normal"
            app:bgselected="@drawable/bg_tuoyuan_selected"
            android:layout_weight="1"/>


    </LinearLayout>

        <!-- 以下按键区域-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />


            <com.sn.blackdianqi.view.AnjianYuanView
                android:id="@+id/view_lingyali"
                android:layout_width="@dimen/anjian_middle_yuan_size"
                android:layout_height="@dimen/anjian_middle_yuan_size"
                app:bgnormal="@drawable/bg_yuan_normal"
                app:bgselected="@drawable/bg_yuan_selected"
                app:icon="@mipmap/xr_lingyali_xiao"
                app:title="@string/lingyali" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <com.sn.blackdianqi.view.AnjianYuanView
                android:id="@+id/view_kandianshi"
                android:layout_width="@dimen/anjian_middle_yuan_size"
                android:layout_height="@dimen/anjian_middle_yuan_size"
                app:bgnormal="@drawable/bg_yuan_normal"
                app:bgselected="@drawable/bg_yuan_selected"
                app:icon="@mipmap/xr_kandianshi_xiao"
                app:title="@string/kandianshi" />


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />


            <com.sn.blackdianqi.view.AnjianYuanView
                android:id="@+id/view_zhihan"
                android:layout_width="@dimen/anjian_middle_yuan_size"
                android:layout_height="@dimen/anjian_middle_yuan_size"
                app:bgnormal="@drawable/bg_yuan_normal"
                app:bgselected="@drawable/bg_yuan_selected"
                app:icon="@mipmap/xr_zhihan_xiao"
                app:title="@string/zhihan" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <com.sn.blackdianqi.view.AnjianYuanView
                android:id="@+id/view_fuyuan"
                android:layout_width="@dimen/anjian_middle_yuan_size"
                android:layout_height="@dimen/anjian_middle_yuan_size"
                app:bgnormal="@drawable/bg_yuan_normal"
                app:bgselected="@drawable/bg_yuan_selected"
                app:icon="@mipmap/xr_fuyuan_xiao"
                app:title="@string/fuyuan" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>