<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_bg"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- 顶部 -->
        <com.sn.blackdianqi.view.SquareLinearLayout
            android:id="@+id/layout_head"
            android:layout_width="@dimen/dingbu_yuan_size"
            android:layout_height="@dimen/dingbu_yuan_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="9dp"
            android:background="@mipmap/ic_yuan"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_anjian_top_icon"
                android:layout_width="@dimen/dingbu_yuan_ren_size"
                android:layout_height="@dimen/dingbu_yuan_ren_size"
                android:layout_marginTop="40dp"
                android:background="@mipmap/animation_beibutiaozheng_1" />

            <TextView
                android:id="@+id/text_anjian_top_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/beibutiaozheng"
                android:textColor="@color/text_yuan"
                android:textSize="@dimen/dingbu_yuan_title_size"></TextView>

        </com.sn.blackdianqi.view.SquareLinearLayout>

        <!-- 调整 -->
        <LinearLayout
            android:id="@+id/layout_tiaozheng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:visibility="visible">



            <com.sn.blackdianqi.view.AnjianWeitiaoView
                android:id="@+id/view_beibutiaozheng"
                android:layout_width="match_parent"
                android:layout_height="@dimen/anjian_weitiao_height"
                android:layout_marginLeft="@dimen/weitiao_marin"
                android:layout_marginTop="@dimen/weitiao_marin"
                android:layout_marginRight="@dimen/weitiao_marin"
                app:bgnormal="@drawable/bg_tuoyuan_normal"
                app:icon="@mipmap/xr_zhihan_xiao"
                app:title="@string/beibutiaozheng" />


            <com.sn.blackdianqi.view.AnjianWeitiaoView
                android:id="@+id/view_tuibutiaozheng"
                android:layout_width="match_parent"
                android:layout_height="@dimen/anjian_weitiao_height"
                android:layout_marginLeft="@dimen/weitiao_marin"
                android:layout_marginTop="@dimen/weitiao_marin"
                android:layout_marginRight="@dimen/weitiao_marin"
                app:bgnormal="@drawable/bg_tuoyuan_normal"
                app:icon="@mipmap/xr_tuibuxunhuan_xiao"
                app:title="@string/tuibutiaozheng" />


            <com.sn.blackdianqi.view.AnjianWeitiaoView
                android:id="@+id/view_zhengtishengjiang"
                android:layout_width="match_parent"
                android:layout_height="@dimen/anjian_weitiao_height"
                android:layout_marginLeft="@dimen/weitiao_marin"
                android:layout_marginTop="@dimen/weitiao_marin"
                android:layout_marginRight="@dimen/weitiao_marin"
                app:bgnormal="@drawable/bg_tuoyuan_normal"
                app:icon="@mipmap/xr_fuyuan_xiao"
                app:title="@string/zhengtishengjiang" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>